Fixed out of bounds genre CSS on musicians profiles

--- a/styles/musicians.module.css
+++ b/styles/musicians.module.css
@@ -27,7 +27,7 @@
   /* color: var(--custom-panel-color); */
   /* color: rgb(0, 0, 0); */
   color: rgb(252, 94, 9);
-  width: 12vw;
+  width: 100%;
 }
 
 .ratesection {
